--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,9 @@
 
       </section>
       <footer>
-        <!-- {% if site.github.is_project_page %}
-          <p>Project maintained by <a href="">XX</a></p>
-        {% endif %} -->
+        {% if site.github.is_project_page %}
+          <p>Project maintained by <a href="">Yatao Bian</a></p>
+        {% endif %}
         <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></small></p> -->
       </footer>
     </div>
